made an index file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>This is a crap portfolio</title>
+	<title>This is a portfolio site</title>
 </head>
 <body>
 
